2016-07-18  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-sty.tex (tex4ht.sty): make macros patched by \pend:def and similar
	patching commands \long, in order to correctly support macros defined with
	\newcommand.
	<https://puszcza.gnu.org.ua/bugs/index.php?330>.

2016-07-17  Karl Berry  <karl@freefriends.org>

	* tex4ht-4ht.tex (\CodeLineNo): disable again since Michal's
	compilation fails.

2016-06-05  Karl Berry  <karl@freefriends.org>

	* ProTex.sty,
	* AlProTex.sty: symlinks to ../protex, so dev versions will be used.
	* Makefile (common): depend on them.

	* tex4ht-c.tex,
	* tex4ht-4ht.tex: enable new protex option CodeLineNo to generate
	#line directives in the .c files, and %line comments in *.4ht.
	http://puszcza.gnu.org.ua/bugs/?136

2016-07-04  Karl Berry  <karl@freefriends.org>

	* tex4ht-html-speech.tex,
	* tex4ht-jsml.tex,
	* tex4ht-mathltx.tex: update copyrights.
	* Makefile (diff-all): --ignore-matching-lines for boilerplate.

2016-07-04  Karl Berry  <karl@freefriends.org>

	* tex4ht-mkht.tex: don't hardwire c: paths.

2016-07-03  Karl Berry  <karl@freefriends.org>

	* tex4ht-4ht.tex,
	* tex4ht-auto-script.tex,
	* tex4ht-env.tex,
	* tex4ht-sty.tex: remove nonascii chars in comments.

2016-07-02  Karl Berry  <karl@freefriends.org>

	* tex4ht-4ht.tex (lettrine.4ht): delete the .lettrine-Agrave css
	with literal Agraves, to avoid encoding agony.  Update copyright.

2016-07-01  Karl Berry  <karl@freefriends.org>

	* tex4ht-sty.tex (tex4ht.sty),
	* tex4ht-4ht.tex (usepackage.4ht): unify copyright notices.	

2016-06-30  Karl Berry  <karl@freefriends.org>

	* tex4ht-4ht.tex (latex.4ht): unify copyright notice.

2016-06-30  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-4ht.tex (latex.4ht): added \hbox{} to active
	hyphen in order to prevent ligatures in environments defined
	with \ScriptEnv.
        <https://puszcza.gnu.org.ua/bugs/?319>

2016-06-16  Michal Hoftich  <michal.h21@gmail.com>
